option(WITH_MULTI_CONTACT_CONTROLLER "Build multi contact controller for mc_rtc" OFF)
option(WITH_BASELINE_WALKING_CONTROLLER "Build baseline walking controller for mc_rtc" OFF)
option(WITH_LOCOMANIP_MANIPULATOR_CONTROLLER "Build locomanip manipulator controller for mc_rtc" OFF)

include(baseline_controllers.cmake)
